Cliente navegacion inicio

--- a/app/src/main/res/layout/activity_registro_vendedor.xml
+++ b/app/src/main/res/layout/activity_registro_vendedor.xml
@@ -14,6 +14,7 @@
         android:padding="15dp"
         >
         <TextView
+            android:layout_marginTop="50dp"
             android:text="@string/registro_vendedor"
             android:layout_width="wrap_content"
             android:textSize="18sp"
