--- a/app/src/main/res/layout/activity_login_vendedor.xml
+++ b/app/src/main/res/layout/activity_login_vendedor.xml
@@ -10,12 +10,14 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="vertical"
         android:padding="15dp"
         >
     <TextView
         android:text="@string/login_vendedor"
         android:layout_gravity="center"
+        android:layout_marginTop="40dp"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
