--- a/app/src/main/res/layout/activity_registro_vendedor.xml
+++ b/app/src/main/res/layout/activity_registro_vendedor.xml
@@ -16,6 +16,7 @@
         <TextView
             android:text="@string/registro_vendedor"
             android:layout_width="wrap_content"
+            android:layout_marginTop="40dp"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_gravity="center"
